--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
-asgiref
-certifi
+aiohttp==3.9.5
+aiohttp-retry==2.8.3
+aiosignal==1.3.1
+asgiref==3.8.1
+attrs==23.2.0
+certifi==2024.2.2
 charset-normalizer==3.3.2
 contourpy==1.2.1
 cycler==0.12.1
@@ -19,6 +23,7 @@ numpy==2.0.0
 packaging==24.0
 pillow==10.3.0
 psutil==5.9.8
+psycopg2-binary==2.9.9
 PyJWT==2.8.0
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
