--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+--index-url https://pypi.org/simple
+Django==5.0.4
 aiohttp==3.9.5
 aiohttp-retry==2.8.3
 aiosignal==1.3.1
@@ -8,7 +10,6 @@ charset-normalizer==3.3.2
 contourpy==1.2.1
 cycler==0.12.1
 dj-database-url==2.2.0
-Django==5.0.4
 fonttools==4.53.0
 frozenlist==1.4.1
 git-filter-repo==2.38.0
